# homomorphic_rl

./: README.md  main.py  pyproject.toml
Scripts/: callbacks.py  ckks.py  encryption.py  generate_data.py  generate_keys.py  homomorphic_sum.py
rl_agent/: DatabaseIndexEnv.py
tests/: test_database.py  test_homomorphic_sum.py
