[tool.poetry]
name = "homomorphic-rl"
version = "0.1.0"
description = "POC for optimizing index for homomorphic SQL"
authors = ["rymarinelli <ryanmarinelli24@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
gymnasium = ">=0.28.1,<0.30"
stable-baselines3 = "^2.3.2"
pytest = "^8.3.3"
numpy = "^2.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
